# lunch-time-mcp

./: .gitignore  LICENSE  README.md  allowlist.example.json  check_mcp.py  pyproject.toml  watch_signal.py
.agents/workflows/: lunch_time.md
lunch_time_mcp/: db.py  main.py  signal_poller.py
tests/: test_db.py  test_parse.py
