[project]
name = "lunch-time-mcp"
version = "0.1.0"
description = "An MCP server for signal-cli that gives AI assistants the ability to send and receive Signal messages."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
server = "lunch_time_mcp.main:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.hatch.build.targets.wheel]
packages = ["lunch_time_mcp"]
